--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
        <script src="./assets/js/route.js" type="module"></script>
 </head>
 <body>
-    
+    <!-- HEADER -->
+     <header class="header">
+        <div class="container">
+
+            <a href="#" class="logo">
+                <img src="./assets/images/logo.png" width="364" height="58" alt="logo">
+            </a>
+
+            <div class="search-view" data-search-view>
+
+                <div class="search-wrapper">
+                    <input type="search" name="search" placeholder="Search city..." class="search-field" autocapitalize="off" data-search-field>
+
+                    <span class="m-icon">search</span>
+
+                    <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler >
+                        <span class="m-icon">arrow_back</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="search-result" data-search-result>
+                <ul class="view-list" data-search-list>
+
+                    <li class="view-item">
+                        <span class="m-icon">location_on</span>
+
+                        <div>
+                            <p class="item-title">London</p>
+                        </div>
+
+                        <p class="label-2 item-subtitle">State of London, GB</p>
+                    </li>
+
+                </ul>
+            </div>
+
+        </div>
+     </header>
 </body>  
 </html>
