--- a/index.html
+++ b/index.html
@@ -45,24 +45,41 @@
                         <span class="m-icon">arrow_back</span>
                     </button>
                 </div>
+
+                <div class="search-result" data-search-result>
+                    <ul class="view-list" data-search-list>
+
+                        <li class="view-item">
+                            <span class="m-icon">location_on</span>
+
+                            <div>
+                                <p class="item--title">London</p>
+
+                                <p class="label-2 item-subtitle">State of London, GB</p>
+                            </div>
+
+                            <a href="#" class="item-link has-state" data-search-toggler></a>
+                        </li>
+
+                    </ul>
+                </div>
+
             </div>
 
-            <div class="search-result" data-search-result>
-                <ul class="view-list" data-search-list>
+            <div class="header-aactions">
 
-                    <li class="view-item">
-                        <span class="m-icon">location_on</span>
+                <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
+                    <span class="m-icon">search</span>
+                </button>
 
-                        <div>
-                            <p class="item-title">London</p>
-                        </div>
+                <a href="#/current-location" class="btn-primary has-state" data-current-btn>
+                    <span class="m-icon">my_location</span>
 
-                        <p class="label-2 item-subtitle">State of London, GB</p>
-                    </li>
+                    <span class="span">Current Location</span>
+                </a>
 
-                </ul>
             </div>
-
+            
         </div>
      </header>
 </body>  
