--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
             </div>
 
-            <div class="header-aactions">
+            <div class="header-actions">
 
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
 
-                <a href="#/current-location" class="btn-primary has-state" data-current-btn>
+                <a href="#/current-location" class="btn-primary has-state" data-current-btn >
                     <span class="m-icon">my_location</span>
 
                     <span class="span">Current Location</span>
