html css header

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <span class="m-icon">location_on</span>
 
                             <div>
-                                <p class="item--title">London</p>
+                                <p class="item-title">London</p>
 
                                 <p class="label-2 item-subtitle">State of London, GB</p>
                             </div>
@@ -82,5 +82,21 @@
             
         </div>
      </header>
+
+
+
+     <main>
+        <article class="container">
+
+            <div class="container-left">
+
+                <!-- CURRENT WEATHER -->
+
+            </div>
+
+        </article>
+     </main>
+
+
 </body>  
 </html>
