--- a/index.html
+++ b/index.html
@@ -92,6 +92,40 @@
 
                 <!-- CURRENT WEATHER -->
 
+                <section class="section current-weather" aria-label="current weather" data-current-weather>
+                    <div class="card card-lg current-weather-card">
+
+                        <h2 class="title-2 card-title">Now</h2>
+
+                        <div class="wrapper">
+                            <p class="heading">25&deg;<sup>c</sup></p>
+
+                            <img src="./assets/images/weather_icons/01d.png" width="64" height="64" alt="Overcast Clouds" class="weather-icon">
+                        </div>
+
+
+                        <p class="body-3">Overcast Clouds</p>
+
+                        <ul class="meta-list">
+
+                            <li class="meat-item">
+                                <span class="m-icon">calendar_today</span>
+
+                                <p class="title-2 meta-text">Thursday 16, Feb</p>
+                            </li>
+
+                            <li class="meat-item">
+                                <span class="m-icon">location_on</span>
+
+                                <p class="title-2 meta-text">London, GB</p>
+                            </li>
+
+
+                        </ul>
+
+                    </div>
+                </section>
+
             </div>
 
         </article>
