html css , current weather

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 
                         <ul class="meta-list">
 
-                            <li class="meat-item">
+                            <li class="meta-item">
                                 <span class="m-icon">calendar_today</span>
 
                                 <p class="title-2 meta-text">Thursday 16, Feb</p>
                             </li>
 
-                            <li class="meat-item">
+                            <li class="meta-item">
                                 <span class="m-icon">location_on</span>
 
                                 <p class="title-2 meta-text">London, GB</p>
