Css Today's Highlight

--- a/index.html
+++ b/index.html
@@ -264,12 +264,6 @@
                                             <p class="label-1">PM <sub>2.5</sub> </p>
                                         </li>
 
-                                        <li class="card-item">
-                                            <p class="title-1">23.3</p>
-
-                                            <p class="label-1">PM <sub>2.5</sub> </p>
-                                        </li>
-
                                     </ul>
 
                                 </div>
@@ -314,7 +308,10 @@
                                 <h3 class="title-3">Humidity</h3>
 
                                 <div class="wrapper">
-                                    <span class="m-icon">humidity_percentage</span>
+                                    <div class="m-icon">
+                                        <span class="m-icon">humidity_percentage</span>
+
+                                    </div>
 
                                     <p class="title-1">35<sub>%</sub></p>
                                 </div>
