Html Css Footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
      <main>
-        <article class="container">
+        <article class="container"> 
 
             <div class="content-left">
 
@@ -365,7 +365,7 @@
                 <!-- HOURLY FORECAST -->
 
 
-                <div class="section hourly-forecast" aria-label="hourly forecast" data-hourly-forecast>
+                <section class="section hourly-forecast" aria-label="hourly forecast" data-hourly-forecast>
 
                     <h2 class="title-2">Today at</h2>
 
@@ -525,8 +525,25 @@
                         </ul>
                     </div>
 
-                 </div>
+                 </section>
+
+                 
+
+            <!-- FOOTER -->
+
+            <footer class="footer">
+                <p class="body-3">Copyright &copy; 2024</p>
+
+                <p class="body3">Powered by
+                     <a href="https://openweathermap.org/api" target="_blank" class="link" rel="noopener">
+                        <img src="./assets//images//openweather.png" width="150" height="30" alt="openweather">
+                     </a>
+                </p>
+            </footer>
+
+
             </div>
+
 
         </article>
      </main>
