--- a/index.html
+++ b/index.html
@@ -551,5 +551,21 @@
      </main>
 
 
+
+     <!-- error -->
+
+     <section class="error-content" data-error-content>
+
+        <h2 class="heading">404</h2>
+
+        <p class="body-1">Page not found!</p>
+
+        <a href="#" class="btn-primary">
+            <span class="span">Go Home</span>
+        </a>
+
+     </section>
+
+
 </body>  
 </html>
